--- a/CreditWebApp/CreditWebApp.csproj
+++ b/CreditWebApp/CreditWebApp.csproj
@@ -6,27 +6,33 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7"/>
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="1.1.0"/>
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0-rc.1.21451.13"/>
-        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0-rc.1.21451.13"/>
-        <PackageReference Include="Serilog" Version="2.11.0-dev-01371"/>
-        <PackageReference Include="Serilog.Extensions.Hosting" Version="4.1.2"/>
-        <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.2-dev-10289"/>
-        <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0-dev-00291"/>
-        <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1-dev-00876"/>
-        <PackageReference Include="Serilog.Sinks.File" Version="5.0.0"/>
-        <PackageReference Include="Serilog.Sinks.Seq" Version="5.0.1"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
-        <PackageReference Include="AutoMapper" Version="10.1.1"/>
-        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1"/>
-        <PackageReference Include="ZNetCS.AspNetCore.Authentication.Basic" Version="5.0.0"/>
+        <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="1.1.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0-rc.1.21451.13" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0-rc.1.21451.13" />
+        <PackageReference Include="Serilog" Version="2.11.0-dev-01371" />
+        <PackageReference Include="Serilog.Extensions.Hosting" Version="4.1.2" />
+        <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.2-dev-10289" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0-dev-00291" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1-dev-00876" />
+        <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+        <PackageReference Include="Serilog.Sinks.Seq" Version="5.0.1" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="AutoMapper" Version="10.1.1" />
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+        <PackageReference Include="ZNetCS.AspNetCore.Authentication.Basic" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Credit.BLL\Credit.BLL.csproj"/>
-        <ProjectReference Include="..\Credit.Core\Credit.Core.csproj"/>
-        <ProjectReference Include="..\Credit.MockDAL\Credit.MockDAL.csproj"/>
+        <ProjectReference Include="..\Credit.BLL\Credit.BLL.csproj" />
+        <ProjectReference Include="..\Credit.Core\Credit.Core.csproj" />
+        <ProjectReference Include="..\Credit.MockDAL\Credit.MockDAL.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="aspnetcore-cert.pfx">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
