--- a/CreditWebApp/Properties/launchSettings.json
+++ b/CreditWebApp/Properties/launchSettings.json
@@ -28,12 +28,15 @@
       }
     },
     "Docker": {
-      "commandName": "Docker",
+      "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_URLS": "http://+:8080"
-      }
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "https://+:5001;http://+:5000"
+      },
+      "dotnetRunMessages": "true",
+      "useSSL": false
     }
   }
 }
