--- a/CreditWebApp/appsettings.json
+++ b/CreditWebApp/appsettings.json
@@ -9,11 +9,16 @@
   "AllowedHosts": "*",
 
   "Serilog": {
-    "Using":  [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using":  [ 
+      "Serilog.Sinks.Console", 
+      "Serilog.Sinks.File",
+      "Serilog.Sinks.Seq"
+    ],
     "MinimumLevel": "Debug",
     "WriteTo": [
       { "Name": "Console" },
-      { "Name": "File", "Args": { "path": "Logs/log.txt" } }
+      { "Name": "File", "Args": { "path": "Logs/log.txt" }},
+      { "Name": "Seq",  "Args": { "serverUrl": "http://172.17.0.1:5341", "apiKey": "uXE5JJCVVFOFmEwcAAIZ"}}
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
     "Properties": {
@@ -21,3 +26,4 @@
     }
   }
 }
+
